language/move-lang/tests/move_check/translated_ir_tests/signer/move_to_extra_arg.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/move_to_extra_arg.move:5:9 ───
   │
 5 │         move_to<R>(s, R { f: false }, a);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. The call expected 2 argument(s) but got 3
   ·
 5 │         move_to<R>(s, R { f: false }, a);
   │                   ---------------------- Found 3 argument(s) here
   │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/move_to_extra_arg.move:15:9 ───
    │
 15 │         move_to<R<bool>>(a, s, a, R<bool> { f: false });
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. The call expected 2 argument(s) but got 4
    ·
 15 │         move_to<R<bool>>(a, s, a, R<bool> { f: false });
    │                         ------------------------------- Found 4 argument(s) here
    │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/move_to_extra_arg.move:15:9 ───
    │
 15 │         move_to<R<bool>>(a, s, a, R<bool> { f: false });
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '0'
    ·
 14 │     fun t0<T>(s: &signer, a: address) {
    │                              ------- The type: 'address'
    ·
 15 │         move_to<R<bool>>(a, s, a, R<bool> { f: false });
    │         ------- Is not compatible with: '&signer'
    │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/move_to_extra_arg.move:15:9 ───
    │
 15 │         move_to<R<bool>>(a, s, a, R<bool> { f: false });
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call of 'move_to'. Invalid argument for parameter '1'
    ·
 14 │     fun t0<T>(s: &signer, a: address) {
    │                  ------- The type: '&signer'
    ·
 15 │         move_to<R<bool>>(a, s, a, R<bool> { f: false });
    │                 ------- Is not compatible with: '0x8675309::N::R<bool>'
    │

